--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ body {
 
 h1 {
     color: white;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
