--- a/style.css
+++ b/style.css
@@ -1,8 +1,79 @@
-body {
-    background-color: rgb(29, 170, 170);
+html {
+    font-family: 'Raleway', sans-serif;
+    margin: 0 0 0 0;
 }
 
-h1 {
+body {
+background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 102));
+}
+
+.banner {
+    width: 100%;
+    background-color: rgb(155, 150, 150);
+    height: 20%;
+  
+}
+/* Dheep */
+.name {
     color: white;
-    font-family: Georgia, 'Times New Roman', Times, serif
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    border-bottom: white solid 2px;
+    padding-bottom: 6px;
+}
+
+/* Generation UK */
+.tag {
+    color: white;
+    position: absolute;
+    right: 10%;
+    top: 10%;
+    border-bottom: white solid 2px;
+    padding-bottom: 6px;
+}
+
+/* List div */
+.list {
+    position: absolute;
+    top: 20%;
+    left: 8%
+}
+
+
+/* list items */
+li {
+    list-style: none;
+    font-size: 1.5em;
+    padding-top: 4vw;
+    
+}
+
+/* list links */
+a {
+    color: white;
+    text-decoration: none;
+}
+
+/* hovers for a in list */
+
+a:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    font-weight: bolder;
+    padding: 10px;
+
+}
+
+h2 {
+    display: inline;
+    color: white;
+    padding-right: 1em;
+}
+
+.contact {
+    position: absolute;
+    right: 10%;
+    bottom: 10%;
+
 }
