--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
-html {
-    font-family: 'Raleway', sans-serif;
-}
-
-body {
-background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 102));
-}
+html {font-family: 'Raleway', sans-serif;}
+body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 102));}
 
 
-/* Dheep */
+/* Dheep Shemare */
 .name {
     color: white;
     position: absolute;
@@ -49,13 +44,11 @@ a {
 }
 
 /* hovers for a in list */
-
 a:hover {
     background-color: rgb(255, 255, 255);
     color: black;
     font-weight: bolder;
     padding: 10px;
-
 }
 
 h2 {
@@ -64,21 +57,17 @@ h2 {
     padding-right: 1em;
 }
 
-
-
 .contact {
     position: absolute;
-    bottom: 13%;
+    bottom: 14%;
     right: 12%;
-    
-
 }
 
+/* Project infos */
 .heading-info {
     color: white;
     position: absolute;
     left: 10%;
     top: 10%;
     padding-bottom: 6px;
-
 }
