--- a/style.css
+++ b/style.css
@@ -73,3 +73,27 @@ h2 {
     top: 10%;
     padding-bottom: 6px;
 }
+
+.bbc-original {
+    position: absolute;
+    top: 80%;
+    left: 25%;
+    border: solid white 5px;
+
+}
+
+.bbc-replica {
+    position: absolute;
+    top: 27%;
+    left: 25%;
+    border: solid white 5px;
+}
+
+/* BBC 'original' tag */
+.section {
+    position: absolute;
+    bottom: 7%;
+    left: 10%;
+    color: white;
+}
+
