refactored code in html and css. Much cleaner system

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {font-family: 'Raleway', sans-serif;}
 body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 102));}
 
 
-/* Dheep Shemare */
+/* Dheep Shemare Web Development */
 .name {
     color: white;
     position: absolute;
@@ -12,7 +12,8 @@ body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 
     padding-bottom: 6px;
 }
 
-/* My Pic*/
+
+/* My image*/
 .home-image{
     position: absolute;
     right: 10%;
@@ -21,49 +22,121 @@ body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 
     border: solid white 2px;
 }
 
-/* List div position */
-.list {
+
+/* Project list div position */
+.project-list-div {
     position: absolute;
-    top: 20%;
-    left: 12%
+    top: 22%;
+    left: 12%;
 }
 
-
-/* list items */
-li {
-    list-style: none;
-    font-size: 1em;
-    padding-top: 4vw;
-    
-}
-
-/* list links */
-a {
-    color: white;
+/* Projct list items styles */
+.project-list-item {
+    color: rgb(255, 255, 255);
     text-decoration: none;
+    line-height: 3em;
+    font-size: 1.1em;
 }
 
-/* hovers for a in list */
-a:hover {
-    background-color: rgb(255, 255, 255);
+
+/* hovers for project list items */
+.project-list-item:hover {
+    background-color: white;
     color: black;
-    font-weight: bolder;
-    padding: 10px;
+    font-weight: bold;
 }
 
-h2 {
+
+/* contact div position */
+.contact-div {    
+    position: absolute;
+    right: 13.5%;
+    top: 35%;
+    text-align: center;
+}
+
+/* contact list style - linked in Email GitHub */
+.contact-list-item {
+    list-style: none;
+    text-align: center;
+    line-height: 3em;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size: 1.1em;
+
+}
+
+/* hovers for contact list items */
+.contact-list-item:hover {
+    padding-bottom: 2px;
+    border-bottom: white solid 1px;
+}
+
+
+
+
+
+
+
+                            /* RESPONSIVE DESIGN  */
+
+
+/* Media query for .name */
+@media only screen and (max-width: 480px) {
+    .name {
+        position: absolute;
+        top: 0%;
+        left: 1%;
+        border: none;
+        text-align: center;
+    }
+}
+
+
+/* Media query for .home-image*/
+@media only screen and (max-width: 480px) {
+    .home-image {
+       display: none;
+        }
+    }
+
+
+/* Media query for .contact*/
+@media only screen and (max-width: 480px) {
+    .contact {
+        text-align: center;
+        position: absolute;
+       
+        }
+    }
+
+/* Media query for .list*/
+@media only screen and (max-width: 480px) {
+    .list {
+        text-align: center;
+        left: 3%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+                            /* STYLES FOR OTHER PAGES */
+
+
+
+/* title positions */
+.page-title {
     display: inline;
     color: white;
-    padding-right: 1em;
 }
 
-/* linked in Email GitHub */
-.contact {    
-    position: absolute;
-    bottom: 14%;
-    right: 12%;
-    text-align: right;
-}
 
 /* Project infos */
 .heading-info {
@@ -74,6 +147,7 @@ h2 {
     padding-bottom: 6px;
 }
 
+/* BBC original position */
 .bbc-original {
     position: absolute;
     top: 80%;
@@ -82,6 +156,7 @@ h2 {
 
 }
 
+/* BBC replica position */
 .bbc-replica {
     position: absolute;
     top: 27%;
@@ -89,7 +164,7 @@ h2 {
     border: solid white 5px;
 }
 
-/* BBC 'original' tag */
+/* BBC 'original' section tag */
 .section {
     position: absolute;
     bottom: 7%;
@@ -97,6 +172,7 @@ h2 {
     color: white;
 }
 
+/* Waves image position */
 .waves-image {
     position: absolute;
     top: 25%;
