--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 
 
 /* Dheep Shemare Web Development */
 .name {
-    color: white;
+    color: rgb(224, 28, 28);
     position: absolute;
     left: 10%;
     top: 10%;
