--- a/style.css
+++ b/style.css
@@ -2,12 +2,43 @@ html {font-family: 'Raleway', sans-serif;}
 body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 102));}
 
 
+body {
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+}
+
+
+.title-box {
+    align-items: flex-end;
+    display: flex;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4em 4em;
+}
+
+.box1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 5em;
+}
+
+.box2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 5em;
+}
+
 /* Dheep Shemare Web Development */
 .name {
     color: rgb(255, 255, 255);
-    position: absolute;
-    left: 10%;
-    top: 10%;
     border-bottom: white solid 2px;
     padding-bottom: 6px;
 }
@@ -15,19 +46,24 @@ body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 
 
 /* My image*/
 .home-image{
-    position: absolute;
-    right: 10%;
-    top: 8%;
     border-radius: 50%;
     border: solid white 2px;
+}
+
+/* My image for mobile */
+.home-image-mobile {
+    border-radius: 50%;
+    border: solid white 2px;
+    display:none;
+    width:7em;
+    height:7em;
 }
 
 
 /* Project list div position */
 .project-list-div {
-    position: absolute;
-    top: 22%;
-    left: 12%;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Projct list items styles */
@@ -41,24 +77,17 @@ body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 
 
 /* hovers for project list items */
 .project-list-item:hover {
-    background-color: white;
-    color: black;
     font-weight: bold;
 }
 
 
 /* contact div position */
 .contact-div {    
-    position: absolute;
-    right: 13.5%;
-    top: 35%;
-    text-align: center;
+    text-align: center; 
 }
 
 /* contact list style - linked in Email GitHub */
 .contact-list-item {
-    list-style: none;
-    text-align: center;
     line-height: 3em;
     color: rgb(255, 255, 255);
     text-decoration: none;
@@ -72,7 +101,9 @@ body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 
     border-bottom: white solid 1px;
 }
 
-
+.line-break-mob { 
+    display:none;
+}
 
 
 
@@ -81,102 +112,102 @@ body {background-image: linear-gradient(to left, rgb(93, 145, 175) , rgb(9, 80, 
                             /* RESPONSIVE DESIGN  */
 
 
+
 /* Media query for .name */
 @media only screen and (max-width: 480px) {
+    .container {
+        padding: 0;
+        flex-direction: column;
+        height: 100vh;
+    }
+
+    .line-break-mob {
+        display: flex
+    }
+
+    .title-box {
+        width: 100%;
+        text-align: center;
+        
+    }
+
     .name {
-        position: absolute;
-        top: 0%;
-        left: 1%;
+        width: 100%;
+        text-align: center;
         border: none;
-        text-align: center;
+        display: inline-block;
     }
-}
 
+    .home-image-mobile {
+    border-radius: 50%;
+    border: solid white 2px;
+    display: flex
+    }
 
-/* Media query for .home-image*/
-@media only screen and (max-width: 480px) {
     .home-image {
-       display: none;
-        }
+    display: none;
+    }
+
+    .project-list-div {
+        text-align: center;
+    }
+
+    .contact-div {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        background-color: rgb(32 25 20 / 48%);
     }
 
 
-/* Media query for .contact*/
-@media only screen and (max-width: 480px) {
-    .contact {
-        text-align: center;
-        position: absolute;
-       
-        }
-    }
-
-/* Media query for .list*/
-@media only screen and (max-width: 480px) {
-    .list {
-        text-align: center;
-        left: 3%;
+    .box1, .box2 {
+        margin: 0%;
     }
 }
-
-
-
-
-
-
-
-
-
 
                             /* STYLES FOR OTHER PAGES */
 
 
 
-/* title positions */
 .page-title {
-    display: inline;
     color: white;
+    font-size: 4vw;
 }
 
 
-/* Project infos */
 .heading-info {
     color: white;
-    position: absolute;
-    left: 10%;
-    top: 10%;
-    padding-bottom: 6px;
+  
 }
 
-/* BBC original position */
-.bbc-original {
-    position: absolute;
-    top: 80%;
-    left: 25%;
-    border: solid white 5px;
+.bbc-flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.bbc-text {
+    display: flex;
+    text-align: left;
+    width: 30vw;
+    align-items: center;
 
 }
 
-/* BBC replica position */
-.bbc-replica {
-    position: absolute;
-    top: 27%;
-    left: 25%;
-    border: solid white 5px;
+.line-height {
+    line-height: 1.9;
+
 }
 
-/* BBC 'original' section tag */
-.section {
-    position: absolute;
-    bottom: 7%;
-    left: 10%;
-    color: white;
+.bbc-images {
+    display: flex;
+    flex-direction: column;
+    margin-block-end: 5px;
+    text-align: center;
+    font-weight: bold;
 }
 
-/* Waves image position */
-.waves-image {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translateX(-50%);
-    border: solid white 5px;
-}
+
+
+
+
