--- a/style.css
+++ b/style.css
@@ -207,7 +207,12 @@ body {
     font-weight: bold;
 }
 
-
-
+.external-project-link {
+    background: rgb(252, 252, 252);
+    color: black;
+    padding: 10px;
+    text-decoration: none;
+    
+}
 
 
